# SituacionProblema

./: .gitignore  Bug_fixes_pendientes.txt  CMakeLists.txt  README.md
ficheros/: productos1.csv  productos2.csv  productos3.csv
src/: Cliente.cpp  Cliente.h  Envio.cpp  Envio.h  Producto.cpp  Producto.h  Repartidor.cpp  Repartidor.h  main.cpp
